VUU25: Downgrade Java 17 -> 11 and Springboot 3 -> 2